--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -7,7 +7,7 @@
 
 
 @font-face {
-    font-family: 'AnotherFont';
+    font-family: 'GlitchFont';
     src: url('/fonts/glitch.ttf') format('truetype');
 }
 
@@ -52,7 +52,7 @@
 
 .paragraph {
     margin: 0.5rem 1rem 0.5rem;
-    font-family: AnotherFont;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .flex {
